--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.28)
-project(sfmlTest LANGUAGES CXX)
+project(TicTacToe LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_custom_target(copy_assets
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy_assets.cmake
+)
 
 include(FetchContent)
 FetchContent_Declare(SFML
@@ -12,5 +16,12 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
-target_link_libraries(main PRIVATE SFML::Graphics)
+add_executable(main 
+    src/main.cpp
+    src/Cell.cpp
+    src/Figure.cpp
+    src/Grid.cpp
+)
+target_link_libraries(main PRIVATE SFML::Graphics SFML::Audio)
+add_dependencies(main copy_assets)
+target_include_directories(main PRIVATE "include" "assets")
